--- a/pages/resources/orgs.html
+++ b/pages/resources/orgs.html
@@ -29,20 +29,20 @@
       <p>The <a href="/pages/guides/organizing">Organizing Guide</a> has more information if you are interested.</p>
 			<!-- Hidden container template
 			<div class="hidden">
-				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Category <span class="hiddenIcon">></span></h2>
+				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Category <span class="hiddenIcon">▸</span></h2>
 				<div class="hiddenBody">
      					<a href=""><p>Resource Name</p>
 				</div>
 			</div>
 			-->
 			<div class="hidden">
-				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">International Organizations <span class="hiddenIcon">></span></h2>
+				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">International Organizations <span class="hiddenIcon">▸</span></h2>
 				<div class="hiddenBody">
 					<a href="https://aaprp-intl.org/"><p>All African People’s Revolutionary Party</p></a>
 				</div>
 			</div>
 			<div class="hidden">
-				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Organizations by Country <span class="hiddenIcon">></span></h2>
+				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Organizations by Country <span class="hiddenIcon">▸</span></h2>
 				<div class="hiddenBody">
 					<a href="orgs/india"><p>India</p></a>
 					<a href="orgs/kenya"><p>Kenya</p></a>
