--- a/pages/resources/socialmedia.html
+++ b/pages/resources/socialmedia.html
@@ -28,25 +28,25 @@
 		<div class="container">
 			<!-- Hidden container template
 			<div class="hidden">
-				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Category <span class="hiddenIcon">></span></h2>
+				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Category <span class="hiddenIcon">▸</span></h2>
 				<div class="hiddenBody">
      				<a href=""><p>Resource Name</p></a>
 				</div>
 			</div>
 			-->
 			<div class="hidden">
-				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Discord <span class="hiddenIcon">></span></h2>
+				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Discord <span class="hiddenIcon">▸</span></h2>
 				<div class="hiddenBody">
 					<!-- Hidden subcontainer template
 					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Category <span class="hiddenIcon">></span></h3>
+						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Category <span class="hiddenIcon">▸</span></h3>
 						<div class="hiddenBody">
 							<a href=""><p>Resource Name</p></a>
 						</div>
 					</div>
 					-->
 					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">News <span class="hiddenIcon">></span></h3>
+						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">News <span class="hiddenIcon">▸</span></h3>
 						<div class="hiddenBody">
 							<a href="https://discord.gg/yvkBs7mUGD/"><p>Proletarian Wii News Channel #2</p></a>
 						</div>
@@ -54,11 +54,11 @@
 				</div>
 			</div>
 			<div class="hidden">
-				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Facebook <span class="hiddenIcon">></span></h2>
+				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Facebook <span class="hiddenIcon">▸</span></h2>
 				<div class="hiddenBody">
 					<!-- Hidden subcontainer template
 					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Category <span class="hiddenIcon">></span></h3>
+						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Category <span class="hiddenIcon">▸</span></h3>
 						<div class="hiddenBody">
 							<a href=""><p>Resource Name</p></a>
 						</div>
@@ -68,11 +68,11 @@
 				</div>
 			</div>
 			<div class="hidden">
-				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Instagram <span class="hiddenIcon">></span></h2>
+				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Instagram <span class="hiddenIcon">▸</span></h2>
 				<div class="hiddenBody">
 					<!-- Hidden subcontainer template
 					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Category <span class="hiddenIcon">></span></h3>
+						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Category <span class="hiddenIcon">▸</span></h3>
 						<div class="hiddenBody">
 							<a href=""><p>Resource Name</p></a>
 						</div>
@@ -82,11 +82,11 @@
 				</div>
 			</div>
 			<div class="hidden">
-				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Mastodon <span class="hiddenIcon">></span></h2>
+				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Mastodon <span class="hiddenIcon">▸</span></h2>
 				<div class="hiddenBody">
 					<!-- Hidden subcontainer template
 					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Category <span class="hiddenIcon">></span></h3>
+						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Category <span class="hiddenIcon">▸</span></h3>
 						<div class="hiddenBody">
 							<a href=""><p>Resource Name</p></a>
 						</div>
@@ -96,11 +96,11 @@
 				</div>
 			</div>
 			<div class="hidden">
-				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Reddit <span class="hiddenIcon">></span></h2>
+				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Reddit <span class="hiddenIcon">▸</span></h2>
 				<div class="hiddenBody">
 					<!-- Hidden subcontainer template
 					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Category <span class="hiddenIcon">></span></h3>
+						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Category <span class="hiddenIcon">▸</span></h3>
 						<div class="hiddenBody">
 							<a href="https://www.reddit.com/"><p>Resource Name</p></a>
 						</div>
@@ -142,11 +142,11 @@
 				</div>
 			</div>
 			<div class="hidden">
-				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Tumblr <span class="hiddenIcon">></span></h2>
+				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Tumblr <span class="hiddenIcon">▸</span></h2>
 				<div class="hiddenBody">
 					<!-- Hidden subcontainer template
 					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Category <span class="hiddenIcon">></span></h3>
+						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Category <span class="hiddenIcon">▸</span></h3>
 						<div class="hiddenBody">
 							<a href=""><p>Resource Name</p></a>
 						</div>
@@ -156,24 +156,24 @@
 				</div>
 			</div>
 			<div class="hidden">
-				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Twitter <span class="hiddenIcon">></span></h2>
+				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Twitter <span class="hiddenIcon">▸</span></h2>
 				<div class="hiddenBody">
 					<!-- Hidden subcontainer template
 					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Category <span class="hiddenIcon">></span></h3>
+						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Category <span class="hiddenIcon">▸</span></h3>
 						<div class="hiddenBody">
 							<a href="https://twitter.com/"><p>Resource Name</p></a>
 						</div>
 					</div>
 					-->
 					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Art <span class="hiddenIcon">></span></h3>
+						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Art <span class="hiddenIcon">▸</span></h3>
 						<div class="hiddenBody">
 							<a href="https://twitter.com/communistposter/"><p>@communistposter</p></a>
 						</div>
 					</div>
 					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">History <span class="hiddenIcon">></span></h3>
+						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">History <span class="hiddenIcon">▸</span></h3>
 						<div class="hiddenBody">
 							<a href="https://twitter.com/leftinthebay"><p>@leftinthebay</p></a>
 							<a href="https://twitter.com/inthespirit"><p>@inthespirit</p></a>
@@ -181,7 +181,7 @@
 						</div>
 					</div>
 					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">News <span class="hiddenIcon">></span></h3>
+						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">News <span class="hiddenIcon">▸</span></h3>
 						<div class="hiddenBody">
 							<a href="https://twitter.com/theintlmagz"><p>@theintlmagz</p></a>
 							<a href="https://twitter.com/thecadrejournal"><p>@thecadrejournal</p></a>
@@ -194,7 +194,7 @@
 						</div>
 					</div>
 					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Theory <span class="hiddenIcon">></span></h3>
+						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Theory <span class="hiddenIcon">▸</span></h3>
 						<div class="hiddenBody">
 							<a href="https://twitter.com/communistcenter"><p>@communistcenter</p></a>
 							<a href="https://twitter.com/nkrumahquotes"><p>@nkrumahquotes</p></a>
