--- a/pages/guides/colonialism.html
+++ b/pages/guides/colonialism.html
@@ -79,6 +79,51 @@
 						</div>
 					</div>
 				</div>
+				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Nationhood <span class="hiddenIcon">▸</span></h2>
+				<div class="hiddenBody">
+     					<p></p>
+					<div class="hidden">
+						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Articles and Pamphlets <span class="hiddenIcon">▸</span></h2>
+						<div class="hiddenBody">
+     							<p>Nothing so far! Please suggest resources if you have any.</p>
+						</div>
+					</div>
+					<div class="hidden">
+						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Books <span class="hiddenIcon">▸</span></h2>
+						<div class="hiddenBody">
+     							<p>1. On The National Question</p>
+     							<p>2. The Right of Nations to Self Determination</p>
+						</div>
+					</div>
+					<div class="hidden">
+						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Videos <span class="hiddenIcon">▸</span></h2>
+						<div class="hiddenBody">
+							<p>Nothing so far! Please suggest resources if you have any.</p>
+						</div>
+					</div>
+				</div>
+				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Settler Colonialism <span class="hiddenIcon">▸</span></h2>
+				<div class="hiddenBody">
+     					<p></p>
+					<div class="hidden">
+						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Articles and Pamphlets <span class="hiddenIcon">▸</span></h2>
+						<div class="hiddenBody">
+     							<p>Nothing so far! Please suggest resources if you have any.</p>
+						</div>
+					</div>
+					<div class="hidden">
+						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Books <span class="hiddenIcon">▸</span></h2>
+						<div class="hiddenBody">
+     							<p>1. Red Skin, White Masks</p>
+						</div>
+					</div>
+					<div class="hidden">
+						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Videos <span class="hiddenIcon">▸</span></h2>
+						<div class="hiddenBody">
+							<p>Nothing so far! Please suggest resources if you have any.</p>
+						</div>
+					</div>
+				</div>
 			</div>
 		<footer>
 			<hr/>
