--- a/pages/guides/colonialism.html
+++ b/pages/guides/colonialism.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="icon" type="image/x-icon" href="/assets/icon.ico">
-		<title>Organizations</title>
+		<title>Colonialism and Imperialism</title>
 		<meta content="The People's Land of Learning" property="og:title"/>
 		<meta content="An educational resource for Anti-Colonial Marxist Leninist and Feminist theory" property="og:description"/>
 		<meta content="https://peopleslandoflearning.github.io/pages/resources/orgs" property="og:url"/>
@@ -42,6 +42,8 @@
 						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Books <span class="hiddenIcon">▸</span></h2>
 						<div class="hiddenBody">
      							<p>1. Wretched of The Earth</p>
+     							<p>- Frantz Fanon, 316 pages.</p>
+     							<p><a href="https://archive.org/embed/thewretchedoftheearth"></a><p>Text</p></a> | Audio Not Available</p>
      							<p>2. How Europe Underdeveloped Africa</p>
      							<p>3. A Dying Colonialism</p>
 						</div>
