--- a/pages/guides/colonialism.html
+++ b/pages/guides/colonialism.html
@@ -7,7 +7,7 @@
 		<title>Colonialism and Imperialism</title>
 		<meta content="The People's Land of Learning" property="og:title"/>
 		<meta content="An educational resource for Anti-Colonial Marxist Leninist and Feminist theory" property="og:description"/>
-		<meta content="https://peopleslandoflearning.github.io/pages/guides/colonialism" property="og:url"/>
+		<meta content="https://peopleslandoflearning.github.io/pages/resources/orgs" property="og:url"/>
 		<meta content="/assets/icon.png" property="og:image"/>
 		<meta content="#ab5675" data-react-helmet="true" name="theme-color"/>
 		<link href="/style.css" rel="stylesheet" type="text/css" media="all">
@@ -75,7 +75,9 @@
 					<div class="hidden">
 						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Videos <span class="hiddenIcon">▸</span></h2>
 						<div class="hiddenBody">
-     							<a href="https://www.youtube.com/watch?v=4lDZaKjfs4E"><p>1. How Rich Countries Rob the Poor</p></a>
+								<p>1. <strong>How Rich Countries Rob The Poor</strong></p>
+								<p>- Hakim, 18 minutes.</p>
+								<p><a href "https://www.youtube.com/watch?v=4lDZaKjfs4E">Youtube</a></p>
      							<a href="https://www.youtube.com/watch?v=NrpLPs2FcF8"><p>2. What is Capitalist Imperialism?</p></a>
      							<a href="https://www.youtube.com/watch?v=xP8CzlFhc14"><p>3. Michael Parenti Lecture on Imperialism</p></a>
 						</div>
